tests/warn/pattern3.stk
type Student = #Student(name: String, year: Int)
type Teacher = #Teacher(name: String, year: Int, subject: String)
type Scientist = #Scientist(name: String, year: Int, superior: Teacher)

type Refined = #Student(name: String, year: Int, sex: Bool)

fun test(s: Student) =
  match s
    case s: Refined => // error
      s.sex

fun test2(s: Student | Teacher) =
  match s
    case s: Refined => // error
      s.sex

    case t: #Teacher(name: String, year: Int, subject: String, sex: Bool) => // error
      t.sex

type Staff = #Teacher(name: String) | #Scientist(name: String, year: Int, superior: #Teacher(name: String))
fun test3(s: Student | Teacher | Scientist) =
  match s
    case _: Staff => // error


type StaffB =
  #Teacher(name: String) |
  #Scientist(name: String, year: Int, superior: #Teacher(name: String, year: Int, subject: String, sex: Bool))

fun test4(s: Student | Teacher | Scientist) =
  match s
    case _: StaffB => // error
